[gd_scene load_steps=6 format=3 uid="uid://dqwt082kouqnp"]

[ext_resource type="Script" uid="uid://hkaj15d5frwt" path="res://Scenes/GameScreen.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://bm6isvsc4ki1a" path="res://Windows/FileExplorer.tscn" id="2_fileexplorer"]
[ext_resource type="PackedScene" uid="uid://cjlyqsy73h6o1" path="res://VN/DialogueBox.tscn" id="3_dialoguebox"]
[ext_resource type="PackedScene" uid="uid://dnemurc3qml8c" path="res://UI/PhoneCallUI.tscn" id="4_phonecallui"]
[ext_resource type="PackedScene" uid="uid://c3jvq6pqb8s8j" path="res://UI/DesktopIcon.tscn" id="5_desktopicon"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0du0")

[node name="DesktopBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.6, 1)

[node name="DesktopIcons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = 150.0
offset_bottom = -60.0
grow_vertical = 0

[node name="EmployeeManifesto" parent="DesktopIcons" instance=ExtResource("5_desktopicon")]
layout_mode = 2
icon_id = "employee_manifesto"
icon_label = "Employee Manifesto"
icon_color = Color(0.9, 0.9, 0.7, 1)

[node name="Spacer1" type="Control" parent="DesktopIcons"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MyComputer" parent="DesktopIcons" instance=ExtResource("5_desktopicon")]
layout_mode = 2
icon_id = "my_computer"
icon_label = "My Computer"
icon_color = Color(0.3, 0.3, 0.3, 1)

[node name="Spacer2" type="Control" parent="DesktopIcons"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Documents" parent="DesktopIcons" instance=ExtResource("5_desktopicon")]
layout_mode = 2
icon_id = "documents"
icon_label = "Documents"
icon_color = Color(0.6, 0.5, 0.3, 1)

[node name="WindowContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FileExplorer" parent="WindowContainer" instance=ExtResource("2_fileexplorer")]
position = Vector2(200, 150)

[node name="Taskbar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="TaskbarContent" type="HBoxContainer" parent="Taskbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Taskbar/TaskbarContent"]
layout_mode = 2
text = "Start"

[node name="Separator" type="Control" parent="Taskbar/TaskbarContent"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FileExplorerButton" type="Button" parent="Taskbar/TaskbarContent"]
layout_mode = 2
text = "üìÅ File Explorer"

[node name="Spacer" type="Control" parent="Taskbar/TaskbarContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="Taskbar/TaskbarContent"]
layout_mode = 2
text = "12:00 PM"
vertical_alignment = 1

[node name="DialogueBox" parent="." instance=ExtResource("3_dialoguebox")]
layout_mode = 1

[node name="PhoneCallUI" parent="." instance=ExtResource("4_phonecallui")]
layout_mode = 1
